- Fix Safari extension open in new tab - Fix tags suggestions jumping

--- a/src/co/bookmarks/edit/form/tags/suggested.module.styl
+++ b/src/co/bookmarks/edit/form/tags/suggested.module.styl
@@ -13,8 +13,6 @@
 
     &:empty {
         opacity: 0
-        min-height: 0
-        max-height: 0
     }
 
     > * {
